--- a/About.html
+++ b/About.html
@@ -1,215 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>About Us</title>
-<link rel="stylesheet" href="style.css" />
-<link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-
 <body>
-    <header class="header">
-        <nav class="navbar">
-            <div class="logo">
-                <img src="img/asia-garden-5.png" width="100" alt="Asia Gargen Hotel logo">
-            </div>
-            <div class="hamburger">☰</div>
+  <header class="header">
+    <nav class="navbar">
+      <div class="logo">
+        <img src="img/asia-garden-5.png" width="100" alt="Asia Garden Hotel logo">
+      </div>
+      <div class="hamburger">☰</div>
 
-            <div class="topnav-center">
-                <a href="index.html">Home</a>
-                <a href="Rooms.html">Room</a>
-                <a href="dining.html">Dining</a>
-                <a href="reference.html">Reference</a>
-                <a class="active" href="about.html">About Us</a>
-                <a href="contact.html">Contact Us</a>
-            </div>
+      <div class="topnav-center">
+        <a href="index.html">Home</a>
+        <a href="Rooms.html">Room</a>
+        <a href="dining.html">Dining</a>
+        <a href="reference.html">Reference</a>
+        <a class="active" href="about.html">About Us</a>
+        <a href="contact.html">Contact Us</a>
+      </div>
 
-             <div class="topnav-right">
-                <div>
-                    <a href="index.html" aria-label="Login">
-                        <i class="fa fa-fw fa-user" aria-hidden="true"></i></a>                
-                </div>
-                <div class="search-box">
-                    <input width="20" type="text" placeholder="search">
-                </div>
-                <select class="lang-select" aria-label="Select Language">
-                    <option>EN</option>
-                    <option>SV</option>
-                </select>
-            </div>
-        </nav>
-
-        <section class="booking-bar">
-            <form action="/action_page.php" class="booking-form">
-
-                <label for="checkin" class="sr-only">Check in</label>
-                <input type="text" id="checkin" placeholder="Check in" onfocus="(this.type='date')"
-                    onblur="if(!this.value)this.type='text'">
-
-                <label for="checkout" class="sr-only">Check out</label>
-                <input type="text" id="checkout" placeholder="Check out" onfocus="(this.type='date')"
-                    onblur="if(!this.value)this.type='text'">
-
-                <label for="adult" class="sr-only">Adult</label>
-                <select id="adult" name="adult">
-                    <option value="0">Adult</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                </select>
-
-                <label for="children" class="sr-only">Children</label>
-                <select id="children" name="children">
-                    <option value="0">Children</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                </select>
-
-                <button type="submit" class="btn-book">Book</button>
-
-            </form>
-        </section>
-    </header>
-
-    <body>
-
-
-
-<div class="about-bigpic">
-    <img src="img/about-hotel.png" alt="a picture of the hotel">
-</div>
-<section class="rooms-section">
-<h1 class="roomh1">Our History</h1>
-<p class="rooms-description">Asia Gardens Hotel & Thai Spa was established in 2005, inspired by a passion for Asian aesthetics and Mediterranean warmth. 
-    <br>The founders envisioned a serene sanctuary where guests could experience luxury intertwined with tranquil gardens and 
-    authentic Asian hospitality. Over the years, it has grown to become a beloved destination for those seeking a blend of 
-    relaxation, culture, and culinary delights.</p>
-</section>
-
-
-<div class="containercatchphrase">
-    <img src="img/catchframe.png" alt="catchphrase image">
-<div class="catchphrasecenter"><h2 class="catchphrase">Where luxury meets comfort</h2></div>
-</div>
-
-<section class="our-team">
-<h2>Our Team</h2>
-<p>At Asia Gardens Hotel & Thai Spa, our team is the soul of our sanctuary. United by a passion for Asian aesthetics and 
-    Mediterranean hospitality, we bring together skilled professionals from diverse backgrounds—spa therapists, culinary artists, 
-    guest service experts—each committed to delivering excellence with grace. Our shared vision is to create a haven where guests 
-    feel truly cared for, surrounded by beauty, tranquility, and authentic cultural warmth.</p>
-
-<section class="Rooms">
-    <article class="room-list">
-        <img src="img/spagirl.png" alt="">
-    </article>
-    <article class="room-list">
-        <img src="img/headchefpic.png" alt="">
-    </article>
-    <article class="room-list">
-        <img src="img/profilepicwoman.jpg.png" alt="">
-    </article>
-    <article class="room-list">
-        <img src="img/headpic.png" alt="">
-    </article>
-    <article class="room-list">
-        <img src="img/profilepicwomanboss.jpg.png" alt="">
-    </article>
-    <article class="room-list">
-        <img src="img/arabpic.png" alt="">
-    </article>
-</section>
-
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<footer>
-        <div class="box-footer-1">
-            <div class="image-footer">
-                <img class="logo-footer" src="./img/asia-garden-5.png" alt="A picture of the logo">
-            </div>
-            <div class="text-footer-1">
-                <p class="title-footer">Asia Garden Hotel</p>
-                <p>48 Oriental Avenue, Bangkok, 10500, Thailand</p>
-                <p>+66 (0) 2 659 9000 </p>
-                <p>mobkk-reservations@mohg.com</p>
-            </div>
+      <div class="topnav-right">
+        <div>
+          <a href="index.html" aria-label="Login">
+            <i class="fa fa-fw fa-user" aria-hidden="true"></i>
+          </a>
         </div>
-
-
-        <div class="footer-bottom">
-
-            <div class="box-footer-2">
-                <div class="text-footer-2">
-                    <p class="newsletter-footer">
-                        Newsletter
-
-                    </p>
-                    <p class="newsletter-text-footer">
-                        Subscribe to our newsletter to see what's happening at
-                        Asia Garden Hotel and to take advantage of our offers.
-                    </p>
-                </div>
-                <form class="form-footer">
-                    <input type="text" placeholder="email adress" id="input-footer">
-                    <input type="submit" value="Sign up" id="button-footer">
-                </form>
-                <!-- <div class="small-box-footer-1"></div> -->
-            </div>
-
-            <div class="box-footer-3">
-                <div class="links-footer">
-                    <a href="index.html">Home</a>
-                    <a href="rooms.html">Room</a>
-                    <a href="dining.html">Dining</a>
-                    <a href="reference.html">Reference</a>
-                    <a href="about.html">About us</a>
-                    <a href="contact.html">Contact us</a>
-                </div>
-                <div class="social-media-footer">
-                    <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"><img
-                            src="./img/youtube.png" alt="A picture of a social media icon"></a>
-                    <a href="https://www.facebook.com" target="_blank"><img src="./img/facebook.png" alt="A picture of a social media icon"></a>
-                    <a href="https://x.com" target="_blank"><img src="./img/twitter.png" alt="A picture of a social media icon"></a>
-                    <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram.png" alt="A picture of a social media icon"></a>
-                    <a href="https://www.linkedin.com/" target="_blank"><img src="./img/linkedin.png" alt="A picture of a social media icon"></a>
-                </div>
-                <div class="copyright-notice">
-                    <p>Asia Garden Hotel @ 2025. All rights reserved.</p>
-                </div>
-            </div>
+        <div class="search-box">
+          <input type="text" placeholder="search" style="width: 20px;">
         </div>
-    </footer>
+        <select class="lang-select" aria-label="Select Language">
+          <option>EN</option>
+          <option>SV</option>
+        </select>
+      </div>
+    </nav>
+
+    <section class="booking-bar">
+      <h2>Booking Bar</h2>
+      <form action="/action_page.php" class="booking-form">
+        <label for="checkin" class="sr-only">Check in</label>
+        <input type="text" id="checkin" placeholder="Check in" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'">
+
+        <label for="checkout" class="sr-only">Check out</label>
+        <input type="text" id="checkout" placeholder="Check out" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'">
+
+        <label for="adult" class="sr-only">Adult</label>
+        <select id="adult" name="adult">
+          <option value="0">Adult</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+        </select>
+
+        <label for="children" class="sr-only">Children</label>
+        <select id="children" name="children">
+          <option value="0">Children</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+        </select>
+
+        <button type="submit" class="btn-book">Book</button>
+      </form>
+    </section>
+  </header>
+
+  <main>
+    <div class="about-bigpic">
+      <img src="img/about-hotel.png" alt="A picture of the hotel">
+    </div>
+
+    <section class="rooms-section">
+    <h2 style="font-size: 3rem;">Our History</h2>
+      <p class="rooms-description">
+        Asia Gardens Hotel & Thai Spa was established in 2005, inspired by a passion for Asian aesthetics and Mediterranean warmth.
+        <br>The founders envisioned a serene sanctuary where guests could experience luxury intertwined with tranquil gardens and
+        authentic Asian hospitality. Over the years, it has grown to become a beloved destination for those seeking a blend of
+        relaxation, culture, and culinary delights.
+      </p>
+    </section>
+
+    <div class="containercatchphrase">
+      <img src="img/catchframe.png" alt="Catchphrase image">
+      <div class="catchphrasecenter">
+        <h2 class="catchphrase">Where luxury meets comfort</h2>
+      </div>
+    </div>
+
+    <section class="our-team">
+      <h2>Meet Our Team</h2>
+      <p>
+        At Asia Gardens Hotel & Thai Spa, our team is the soul of our sanctuary. United by a passion for Asian aesthetics and
+        Mediterranean hospitality, we bring together skilled professionals from diverse backgrounds—spa therapists, culinary artists,
+        guest service experts—each committed to delivering excellence with grace.
+      </p>
+
+      <section class="Rooms">
+        <article class="room-list">
+          <h3>Spa Therapist</h3>
+          <img src="img/spagirl.png" alt="Spa Therapist">
+        </article>
+        <article class="room-list">
+          <h3>Head Chef</h3>
+          <img src="img/headchefpic.png" alt="Head Chef">
+        </article>
+        <article class="room-list">
+          <h3>Guest Manager</h3>
+          <img src="img/profilepicwoman.png" alt="Guest Manager">
+        </article>
+        <article class="room-list">
+          <h3>Hotel Director</h3>
+          <img src="img/headpic.png" alt="Hotel Director">
+        </article>
+        <article class="room-list">
+          <h3>General Manager</h3>
+          <img src="img/profilepicwomanboss.png" alt="General Manager">
+        </article>
+        <article class="room-list">
+          <h3>Concierge</h3>
+          <img src="img/arabpic.png" alt="Concierge">
+        </article>
+      </section>
+    </section>
+  </main>
+
+  <footer>
+    <div class="box-footer-1">
+      <div class="image-footer">
+        <img class="logo-footer" src="./img/asia-garden-5.png" alt="Asia Garden Hotel logo">
+      </div>
+      <div class="text-footer-1">
+        <p class="title-footer">Asia Garden Hotel</p>
+        <p>48 Oriental Avenue, Bangkok, 10500, Thailand</p>
+        <p>+66 (0) 2 659 9000</p>
+        <p>mobkk-reservations@mohg.com</p>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <div class="box-footer-2">
+        <div class="text-footer-2">
+          <p class="newsletter-footer">Newsletter</p>
+          <p class="newsletter-text-footer">
+            Subscribe to our newsletter to see what's happening at Asia Garden Hotel and to take advantage of our offers.
+          </p>
+        </div>
+        <form class="form-footer">
+          <input type="text" placeholder="email address" id="input-footer">
+          <input type="submit" value="Sign up" id="button-footer">
+        </form>
+      </div>
+
+      <div class="box-footer-3">
+        <div class="links-footer">
+          <a href="index.html">Home</a>
+          <a href="rooms.html">Room</a>
+          <a href="dining.html">Dining</a>
+          <a href="reference.html">Reference</a>
+          <a href="about.html">About us</a>
+          <a href="contact.html">Contact us</a>
+        </div>
+        <div class="social-media-footer">
+          <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"><img src="./img/youtube.png" alt="YouTube icon"></a>
+          <a href="https://www.facebook.com" target="_blank"><img src="./img/facebook.png" alt="Facebook icon"></a>
+          <a href="https://x.com" target="_blank"><img src="./img/twitter.png" alt="Twitter icon"></a>
+          <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram.png" alt="Instagram icon"></a>
+          <a href="https://www.linkedin.com/" target="_blank"><img src="./img/linkedin.png" alt="LinkedIn icon"></a>
+        </div>
+        <div class="copyright-notice">
+          <p>Asia Garden Hotel © 2025. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
